--- a/src/app/reservation/reservation.component.css
+++ b/src/app/reservation/reservation.component.css
@@ -110,7 +110,7 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background: black;
+    background: gray;
     border-radius: 7px;
   }
   
