--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
-
+*{
+  margin-top: 1%;
+}
 body{
   background: #f2f2f2;
   font-family: 'Open Sans', sans-serif;
@@ -55,9 +57,9 @@ body{
   width: 50%;
 position: relative;
 margin-top: 4%;
-  top: 50%;
-  left: 50%;
-  margin-bottom: 4%;
+top: 50%;
+left: 50%;
+  margin-bottom: 2%;
   transform: translate(-50%, -50%);
 }
 
@@ -175,9 +177,9 @@ body {
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .column {
-    width: 100%;
+    width: 87%;
     display: block;
     margin-bottom: 20px;
   }
