--- a/src/app/registration/register/register.component.css
+++ b/src/app/registration/register/register.component.css
@@ -68,3 +68,11 @@ p {
     text-align: center;
     display: none;
 }
+@media screen and (max-width: 820px) {
+    .container{
+    margin: auto;
+    }
+    body{
+        padding-bottom: 25vh;
+    }
+}
