--- a/src/app/registration/login/login.component.css
+++ b/src/app/registration/login/login.component.css
@@ -4,10 +4,10 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color:white;
     color: white;
-    margin-top: 0.5%;
-    padding-top: 15vh;
-    padding-bottom: 20vh;
-    background-image: url("https://png.pngtree.com/background/20210711/original/pngtree-taobao-vector-movie-cartoon-popcorn-cola-film-blue-poster-picture-image_1108601.jpg");
+    padding-top: 16vh;
+
+    padding-bottom:19vh;
+    background-image: url("https://t3.ftcdn.net/jpg/02/55/67/62/360_F_255676210_fiOrmx7LosKnQrtNrWPllUrunUkqTuCy.jpg");
     background-color: black;
     background-repeat:no-repeat;
     background-size:cover;
@@ -16,13 +16,12 @@ body{
     width: 400px;
     display: flex;
     flex-direction: column;
-    margin-top: 4%;
     align-items: center;
-    background-color: lightcoral;
+    background-color:lightcoral;
     border-radius: 15px;
     padding: 25px 10px;
     box-shadow: 0 0 15px rgb(80, 79, 79);
-    margin-left: 50%;
+    margin-left: 55%;
 
 }
 form{
@@ -31,12 +30,14 @@ form{
     width: 90%;
     
 }
+h3{
+    margin-bottom: 1%;
+}
 input{
     height: 40px;
     border-radius: 10px;
     border: none;
     outline: none;
-    margin: 5px ;
     text-align: center;
     font-size: 18px;
     color: black;
@@ -45,6 +46,7 @@ input{
 }
 .btns{
     margin: 15px auto;
+    margin-top: 25px;
 }
 button{
     background-color: rgb(0, 0, 0);
