--- a/src/app/registration/register/register.component.css
+++ b/src/app/registration/register/register.component.css
@@ -4,10 +4,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: white;
     color: white;
-    margin-top: 0.5%;
-    padding-top: 8vh;
-    padding-bottom: 2vh;
-    background-image: url("https://png.pngtree.com/background/20210711/original/pngtree-taobao-vector-movie-cartoon-popcorn-cola-film-blue-poster-picture-image_1108601.jpg");
+    padding-top: 6vh;
+    padding-bottom: 5vh;
+    background-image: url("https://t3.ftcdn.net/jpg/02/55/67/62/360_F_255676210_fiOrmx7LosKnQrtNrWPllUrunUkqTuCy.jpg");
     background-color: black;
     background-repeat:no-repeat;
     background-size:cover;
@@ -17,8 +16,7 @@ body {
     width: 400px;
     display: flex;
     flex-direction: column;
-    margin-top: 4%;
-    margin-left: 50%;
+    margin-left: 55%;
     align-items: center;
     background-color:lightcoral;
     border-radius: 15px;
@@ -31,13 +29,14 @@ form {
     flex-direction: column;
     width: 90%;
 }
-
+h3{
+    margin-bottom: 1%;
+}
 input {
     height: 40px;
     border-radius: 10px;
     border: none;
     outline: none;
-    margin: 5px;
     text-align: center;
     font-size: 18px;
     color: black;
