--- a/src/app/registration/login/login.component.html
+++ b/src/app/registration/login/login.component.html
@@ -12,10 +12,10 @@
     <div class="container">
         <h2 style="color: black;">Login</h2>
         <form action="">
-            <h3 style="color: black;">Email:</h3>
-            <input type="text" name="username" id="username" placeholder="Username" required  #email>
-            <h3 style="color: black;">Password:</h3>
-            <input type="password" name="pass" id="pass" placeholder="Password" required  #password>
+            <h3 style="color: black;">Email</h3>
+            <input type="text" name="username" id="username" placeholder="Enter Username" required  #email>
+            <h3 style="color: black;">Password</h3>
+            <input type="password" name="pass" id="pass" placeholder="Enter Password" required  #password>
             
            <div class="btns">
             <button type="submit" (click)="login(email.value,password.value)">Login</button>
