--- a/src/app/reservation/reservation.component.css
+++ b/src/app/reservation/reservation.component.css
@@ -221,6 +221,7 @@ body {
 
   #book{
       margin-left: 48%;
+      margin-bottom: 1%;
     display: inline-block;
     outline: none;
     cursor: pointer;
