--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,8 +8,40 @@ body{
   font-family: 'Open Sans', sans-serif;
 
 }
+.example{
+  display: flex;
+}
+form.example input[type=text] ,form.example input[type=date]{
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+}
 
-.search {
+form.example button {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+}
+
+form.example button:hover {
+  background: #0b7dda;
+}
+
+form.example::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+/* .search {
   width: 100%;
   position: relative;
   display: flex;
@@ -51,7 +83,7 @@ body{
   border-radius: 0 5px 5px 0;
   cursor: pointer;
   font-size: 20px;
-}
+} */
 
 /*Resize the wrap to see the search bar change!*/
 .wrap{
@@ -101,6 +133,7 @@ span{
   color: dodgerblue;
 }
 #book{
+  margin-bottom: 3%;
 display: inline-block;
 outline: none;
 cursor: pointer;
@@ -162,10 +195,10 @@ body {
 */
 .column {
   float: left;
-  width:20%;
+  width:27%;
   padding: 0 2px;
   margin-bottom: 20px;
-  margin-left: 3.5%;
+  margin-left: 4.5%;
 }
 
 .row {margin: 0 -5px;}
