--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -9,7 +9,7 @@
 </head>
 <h3 style="color: black;">Remaining Seats: {{availableseats}}</h3>
 <h3 style="color: black;">Ticket Price: {{price | currency:'INR'}}</h3>
-<h3 style="color: black;float:right;margin-right: 2%;">Total Price: {{total | currency:'INR'}}</h3>
+<h3 id="price" style="color: black;">Total Price: {{total | currency:'INR'}}</h3>
 <body>
 
     <div class="theatre">
