--- a/src/app/admin/theaters/theaters.component.css
+++ b/src/app/admin/theaters/theaters.component.css
@@ -1,30 +1,13 @@
-#booking {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-    margin-top: 2%;
-  }
-  
-  #booking td, #booking th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  #booking tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #booking tr:hover {background-color: #ddd;}
-  
-  #booking th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color: lightcoral;
-    color: white;
+body{
+    font-family: Arial, Helvetica, sans-serif; 
+
   }
 
   .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    padding: 2px 16px;
+    text-align: center;
   }
   
   .card:hover {
@@ -34,13 +17,15 @@
   .container {
     padding: 2px 16px;
   }
-
+ td{
+   width: 350px;
+ }
   .column {
-    float: left;
     width:90%;
     padding: 0 2px;
-    margin-bottom: 20px;
-    margin-left: 3.5%;
+    margin-bottom: 10px;
+    margin-left: 4%;
+    margin-top: 10px;
   }
   
   .row {margin: 0 -5px;}
@@ -52,8 +37,12 @@
     clear: both;
   }
   
+  
+
+  * {
+    box-sizing: border-box;
+  }
   #book{
-    margin-bottom: 3%;
   display: inline-block;
   outline: none;
   cursor: pointer;
@@ -67,10 +56,3 @@
   background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
   color: #fff;
   }
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
-    }
-  } 
