--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -13,13 +13,16 @@
     <div class="container">
         <h2 style="color: black;">Updation</h2>
         <form action="" #userForm="ngForm">
-
-            <input type="text" name="username" id="username" placeholder="Your name" #name value="{{user.name}}"
+            <h3 style="color: black;">Name</h3>
+            <input type="text" name="username" id="username" placeholder="Enter Name" #name value="{{user.name}}"
             required>
-            <input type="email"  class="form-control" name="email" id="email" placeholder="Email"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" #email value="{{user.email}}"
+            <h3 style="color: black;">Email</h3>
+            <input type="email"  class="form-control" name="email" id="email" placeholder="Enter Email"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" #email value="{{user.email}}"
             required> 
-            <input type="password" name="password"  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,12}$" id="password" placeholder="New Password" required #password > 
-            <input type="tel" name="phone" pattern="^\d{10}$" id="phone" placeholder=" Phone no" required #phone value="{{user.phone}}">
+            <h3 style="color: black;">Password</h3>
+            <input type="password" name="password"  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,12}$" id="password" placeholder="Enter Password" required #password> 
+            <h3 style="color: black;">Phone</h3>
+            <input type="tel" name="phone" pattern="^\d{10}$" id="phone" placeholder="Enter Phone no" value="{{user.phone}}" required #phone>
 
             <div class="btns">
                 <button type="submit" (click)="update(name.value,email.value,password.value,phone.value)">Update</button>
@@ -27,7 +30,6 @@
 
         </form>
     </div>
-
     <footer style="color: black; margin-top: 40px;">Password - At least 1 Uppercase, At least 1 Lowercase, At least 1 Number, At least 1 Symbol (symbol allowed --> !@#$%^&*_=+-), Min 8 chars and Max 12 chars</footer> 
 </body>
 
