--- a/src/app/reservation/reservation.component.css
+++ b/src/app/reservation/reservation.component.css
@@ -62,6 +62,9 @@ p {
     display: none;
 } */
 
+#price{
+  float:right;margin-right: 2%;
+}
 h1{
     text-align: center;
 }
@@ -69,6 +72,7 @@ body {
     background:lightgray;
     padding-top: 20vh;
     padding-bottom: 35vh;
+
   }
   
   .theatre {
@@ -77,6 +81,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     margin-top: 5%;
+
   }
   
   .cinema-seats {
@@ -235,3 +240,20 @@ body {
     background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
     color: #fff;
     }
+
+    
+@media screen and (max-width: 700px) {
+  #price{
+    float:none;
+  }
+  h3{
+    text-align: center;
+  }
+  .theatre{
+    margin-right: 25%;
+  }
+  .left .seat{
+    width: 32px;
+    height: 50px;
+  }
+} 
