--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -22,6 +22,7 @@
                 <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/addMovies">Add Movies</a>
                 <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/addCinema">Add Theaters</a>
                 <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/userDetails">Users</a>
+                <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/theaters">Theaters</a>
                 <a *ngIf="isInside()==true" (click)="logout()">Logout</a>
 
             </ul>
