--- a/src/app/admin/add-cinema/add-cinema.component.html
+++ b/src/app/admin/add-cinema/add-cinema.component.html
@@ -1,5 +1,5 @@
 <div class="container">  
-    <form id="contact" action="" method="post">
+    <form id="contact" >
       <h3>Add Cinema</h3>
       <h5>Theater Name:</h5>
       <fieldset>
