--- a/src/app/admin/add-movies/add-movies.component.html
+++ b/src/app/admin/add-movies/add-movies.component.html
@@ -1,5 +1,5 @@
 <div class="container">  
-    <form id="contact" action="" method="post">
+    <form id="contact" >
       <h3>Add Movies</h3>
       <h5>Title:</h5>
       <fieldset>
