--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -19,9 +19,10 @@
                 <a *ngIf="isInside()==true" routerLink="/home">Home</a>
                 <a *ngIf="isInside()==true && isadmin()==false" routerLink="/records">Bookings</a>
                 <a *ngIf="isInside()==true  && isadmin()==false" routerLink="/profile">Profile</a>
-                <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/addMovies">Add Movies</a>
-                <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/addCinema">Add Theaters</a>
                 <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/userDetails">Users</a>
+                <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/addMovies">Add-Mov</a>
+                <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/addCinema">Add-Cine</a>
+                <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/movies">Movies</a>
                 <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/theaters">Theaters</a>
                 <a *ngIf="isInside()==true" (click)="logout()">Logout</a>
 
