admin delete feature added

--- a/src/app/admin/add-cinema/add-cinema.component.html
+++ b/src/app/admin/add-cinema/add-cinema.component.html
@@ -1,25 +1,35 @@
+<h3 style="text-align:center ;margin-bottom: 1%;margin-top: 1%;">Theaters List</h3>
+    <fieldset>
+    <select id="top" style="width: 50%;margin-left: 25%;" (change)="result(cine.value)" #cine>
+  <option *ngFor="let box of cinema">{{box | titlecase}}</option>
+
+</select>
+</fieldset>
+
+
+
 <div class="container">  
     <form id="contact" >
       <h3>Add Cinema</h3>
       <h5>Theater Name:</h5>
       <fieldset>
-        <input placeholder="Name of Theater" type="text" tabindex="1" required autofocus #name>
+        <input value="{{theatername}}" placeholder="Name of Theater" type="text" tabindex="1" required autofocus #name>
       </fieldset>
       <h5>City:</h5>
       <fieldset>
-        <input placeholder="Location of Theater" type="text" tabindex="2" required #city>
+        <input value="{{cityname}}" placeholder="Location of Theater" type="text" tabindex="2" required #city>
       </fieldset>
       <h5>Ticket Price:</h5>
       <fieldset>
-        <input placeholder="Ticket Price in Rupees" type="number" tabindex="2" required #ticketPrice>
+        <input value="{{ticket}}" placeholder="Ticket Price in Rupees" type="number" tabindex="2" required #ticketPrice>
       </fieldset>
       <h5>Row Values:</h5>
       <fieldset>
-        <input placeholder="Row values in alphabet" type="text" tabindex="2" required #rows> 
+        <input value="{{noofrows}}" placeholder="Row values in alphabet" type="text" tabindex="2" required #rows> 
       </fieldset>
       <h5>Column Values:</h5>
       <fieldset>
-        <input placeholder="Column values in number" type="text" tabindex="2" required #columns> 
+        <input value="{{noofcolumns}}" placeholder="Column values in number" type="text" tabindex="2" required #columns> 
       </fieldset>
       <h5>Movie:</h5>
       <fieldset>
@@ -33,13 +43,13 @@
       <fieldset>
         <input placeholder="Show Start time" type="text" tabindex="3" required #startAt>
       </fieldset>
-      <h5>Release Date:</h5>
+      <h5>Show Date:</h5>
       <fieldset>
-        <input placeholder="Release Date of Movie" type="date" tabindex="3" required #date>
+        <input placeholder="Show Date of Movie" type="date" tabindex="3" required #date>
       </fieldset>
       <h5>Image Url:</h5>
       <fieldset>
-        <input placeholder="Imaage Url of Movie" type="url" tabindex="4" required #image>
+        <input value="{{imageurl}}" placeholder="Imaage Url of Theater" type="url" tabindex="4" required #image>
       </fieldset>
       <fieldset>
         <button name="submit" type="submit" id="contact-submit" (click)="submit(name.value,city.value,ticketPrice.value,rows.value,columns.value,movie.value,startAt.value,date.value,image.value)" data-submit="...Sending">Submit</button>
