--- a/src/app/admin/theaters/theaters.component.html
+++ b/src/app/admin/theaters/theaters.component.html
@@ -24,8 +24,8 @@
           <h3>TicketPrice : <span style="color: crimson;">{{item.ticketPrice | currency:'INR'}}</span></h3>
         </td>
         </tr>
-        <button id="book" (click)="edit(item.id)">Edit</button>
-        <button id="book" style="margin-left: 1%;" (click)="delete(item.id)">Delete</button>
+        <button id="book1" (click)="edit(item.id)">Edit</button>
+        <button id="book2" style="margin-left: 1%;" (click)="delete(item.id)">Delete</button>
         </div>
   </div>
   </div>
