--- a/src/app/admin/add-cinema/add-cinema.component.css
+++ b/src/app/admin/add-cinema/add-cinema.component.css
@@ -18,7 +18,10 @@ body {
   line-height: 30px;
   color: #777;
 }
-
+#top{
+  font-size: 20px;
+  padding: 0.5%;
+}
 .container {
   max-width: 400px;
   width: 100%;
