--- a/src/app/admin/edit-movie/edit-movie.component.html
+++ b/src/app/admin/edit-movie/edit-movie.component.html
@@ -1,6 +1,6 @@
 <div class="container">  
     <form id="contact" >
-      <h3>Add Movies</h3>
+      <h3>Edit Movies</h3>
       <h5>Title:</h5>
       <fieldset>
         <input value="{{list.title}}" placeholder="Title of Movie" type="text" tabindex="1" required autofocus #title>
@@ -31,7 +31,7 @@
       </fieldset>
       <h5>Release Date:</h5>
       <fieldset>
-        <input value="{{list.releaseDate | date}}" placeholder="Release Date of Movie" type="date" tabindex="3" required #releaseDate>
+        <input value="{{list.releaseDate | date:'yyyy-MM-dd'}}" placeholder="Release Date of Movie" type="date" tabindex="3" required #releaseDate>
       </fieldset>
       <h5>Image Url:</h5>
       <fieldset>
