--- a/src/app/admin/theaters/theaters.component.css
+++ b/src/app/admin/theaters/theaters.component.css
@@ -7,7 +7,6 @@ body{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     padding: 2px 16px;
-    text-align: center;
   }
   
   .card:hover {
@@ -21,10 +20,10 @@ body{
    width: 350px;
  }
   .column {
-    width:90%;
+    width:93%;
     padding: 0 2px;
     margin-bottom: 10px;
-    margin-left: 4%;
+    margin-left: 3%;
     margin-top: 10px;
   }
   
@@ -45,7 +44,7 @@ body{
   h3{
     margin-left: 20%;
   }
-  #book{
+  #book1{
   display: inline-block;
   outline: none;
   cursor: pointer;
@@ -59,3 +58,18 @@ body{
   background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
   color: #fff;
   }
+  #book2{
+    float: right;
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 13px;
+    line-height: 20px;
+    font-weight: 600;
+    border-radius: 8px;
+    padding: 14px 24px;
+    border: none;
+    transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+    background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
+    color: #fff;
+    }
