--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,7 +15,7 @@ body{
   margin-top: 1.5%;
   font-size: 15px;
 }
-form.example input[type=text] ,form.example input[type=date]{
+form.example input[type=text] {
   padding: 7px;
   font-size: 15px;
   border: 1px solid grey;
@@ -25,9 +25,10 @@ form.example input[type=text] ,form.example input[type=date]{
 }
 
 form.example button {
+  margin-top: 1.5%;
   float: left;
   width: 20%;
-  padding: 10px;
+  padding: 8px;
   background: #2196F3;
   color: white;
   font-size: 17px;
@@ -44,6 +45,15 @@ form.example::after {
   content: "";
   clear: both;
   display: table;
+}
+.date{
+  border: none;
+  text-decoration: none;
+  box-shadow: 0 0 3px gray;
+ height: 40px;
+ margin-top: 1.5%;
+padding-left: 1%;
+padding-right: 1%;
 }
 /* .search {
   width: 100%;
