--- a/src/app/details/movie-detail/movie-detail.component.html
+++ b/src/app/details/movie-detail/movie-detail.component.html
@@ -5,7 +5,7 @@
       <div class="card">
         <img src={{movieInformation.image}} alt="Avatar" style="width:100%">
         <div class="container" style="text-align: center;">
-          <h1>{{movieInformation.title | titlecase}}</h1> 
+          <h1 style="color:crimson">{{movieInformation.title | titlecase}}</h1> 
           <h3>Movie Language : <span>{{movieInformation.language | titlecase }}</span></h3> 
           <h3>Movie Genere : <span>{{movieInformation.genere | titlecase}}</span></h3>
           <h3>Movie Director : <span>{{movieInformation.director | titlecase}}</span></h3>
