--- a/src/app/details/booking-details/booking-details.component.css
+++ b/src/app/details/booking-details/booking-details.component.css
@@ -1,3 +1,4 @@
+
 #booking {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
@@ -7,16 +8,15 @@
   
   #booking td, #booking th {
     border: 1px solid #ddd;
-    padding: 8px;
   }
   
-  #booking tr:nth-child(even){background-color: #f2f2f2;}
+  #booking tr:nth-child(even){background-color: linen;}
   
   #booking tr:hover {background-color: #ddd;}
   
   #booking th {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     text-align: center;
     background-color: lightcoral;
     color: white;
@@ -25,6 +25,7 @@
   .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    background-color:linen;
   }
   
   .card:hover {
@@ -33,14 +34,16 @@
   
   .container {
     padding: 2px 16px;
+
+
   }
 
   .column {
-    float: left;
-    width:90%;
+    width:70%;
     padding: 0 2px;
     margin-bottom: 20px;
-    margin-left: 3.5%;
+    margin-left: 16%;
+    text-align: center;
   }
   
   .row {margin: 0 -5px;}
@@ -53,7 +56,8 @@
   }
   
   #book{
-    margin-bottom: 3%;
+    margin-top: 1%;
+    margin-bottom: 1%;
   display: inline-block;
   outline: none;
   cursor: pointer;
@@ -74,3 +78,21 @@
       margin-bottom: 20px;
     }
   } 
+
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  .container {
+    padding: 2px 16px;
+  }
+
+
+  span{
+    color: crimson;
+  }
