--- a/src/app/details/cinema-detail/cinema-detail.component.html
+++ b/src/app/details/cinema-detail/cinema-detail.component.html
@@ -1,6 +1,22 @@
 
 <h1>Cinema Details</h1>
-<table *ngIf="cinemaInformation" id="cinema" >
+
+
+<div class="row" *ngIf="cinemaInformation">
+   <div class="column" >
+     <div class="card">
+       <img src={{cinemaInformation.image}} alt="Aatar" style="width:100%">
+       <div class="container" style="text-align: center;">
+         <h1 style="color:crimson">{{cinemaInformation.name | titlecase}}</h1> 
+         <h3>Ticket Price : <span>{{cinemaInformation.ticketPrice | currency:'INR'}}</span></h3> 
+         <h3>City : <span>{{cinemaInformation.city | titlecase}}</span></h3>
+         <h3>Total Seats : <span>{{cinemaInformation.seats}}</span></h3>
+       </div>
+     </div>
+ </div>
+ </div>
+
+<!-- <table *ngIf="cinemaInformation" id="cinema" >
 
      <tr style="text-align:center">
         <td>Theater Name : </td>
@@ -18,4 +34,4 @@
          <td>Total Seats : </td>
          <td>{{cinemaInformation.seats}}</td>
      </tr>
-   </table>
+   </table> -->
