refresh token added

--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -24,6 +24,7 @@
                 <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/addCinema">Add-Cine</a>
                 <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/movies">Movies</a>
                 <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/theaters">Theaters</a>
+                <a *ngIf="isInside()==true && isadmin()==true" routerLink="/admin/reservation">Reserved</a>
                 <a *ngIf="isInside()==true" (click)="logout()">Logout</a>
 
             </ul>
