--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -11,7 +11,7 @@
 <h3 style="color: black;">Ticket Price: {{price | currency:'INR'}}</h3>
 <h3 id="price" style="color: black;">Total Price: {{total | currency:'INR'}}</h3>
 <body>
-
+<div class="scroll">
     <div class="theatre">
   
         <div class="cinema-seats left" >
@@ -21,7 +21,7 @@
         </div>
            
       </div>
-
+    </div>
 
 
 
