--- a/src/app/admin/movies-list/movies-list.component.css
+++ b/src/app/admin/movies-list/movies-list.component.css
@@ -1,4 +1,5 @@
-body{
+/* body{
+
     font-family: Arial, Helvetica, sans-serif; 
 
   }
@@ -58,4 +59,70 @@ body{
   transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
   background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
   color: #fff;
+  } */
+  span{
+    color: dodgerblue;
+  }
+  #book{
+    margin-bottom: 3%;
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 14px 24px;
+  border: none;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+  background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
+  color: #fff;
+  }
+  
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .column {
+    float: left;
+    width:27%;
+    padding: 0 2px;
+    margin-bottom: 20px;
+    margin-left: 4.5%;
+  }
+  
+  .row {margin: 0 -5px;
+    margin-top: 2%;
+  }
+  
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  
+  @media screen and (max-width: 700px) {
+    .column {
+      width: 87%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  } 
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  .container {
+    padding: 2px 16px;
+  }
+  img{
+    height: 350px;
   }
