--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -35,6 +35,7 @@ input {
     font-size: 18px;
     color: black;
     background-color: linen;
+    border: 2px solid black;
 }
 
 .btns {
@@ -63,4 +64,8 @@ p {
 }
 h3{
     margin-bottom: 0;
+}
+.invalid{
+    background-color:salmon;
+    border: 2px solid crimson !important;
 }
