--- a/src/app/registration/register/register.component.css
+++ b/src/app/registration/register/register.component.css
@@ -24,6 +24,7 @@ body {
     box-shadow: 0 0 15px rgb(80, 79, 79);
 }
 
+
 form {
     display: flex;
     flex-direction: column;
@@ -41,6 +42,7 @@ input {
     font-size: 18px;
     color: black;
     background-color: linen;
+    border: 2px solid black;
 }
 
 .btns {
@@ -56,6 +58,7 @@ button {
     font-size: 18px;
     cursor: pointer;
     margin: 5px 25px;
+
 }
 
 button:hover {
@@ -66,6 +69,10 @@ p {
     color: red;
     text-align: center;
     display: none;
+}
+.invalid{
+    background-color:salmon;
+    border: 2px solid crimson !important;
 }
 @media screen and (max-width: 820px) {
     .container{
